; ModuleID = '/home/carl/AnghaBench/torch7/lib/luaT/extr_luaT.c_luaT_lua_setenv.c'
source_filename = "/home/carl/AnghaBench/torch7/lib/luaT/extr_luaT.c_luaT_lua_setenv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [21 x i8] c"function or userdata\00", align 1
@LUA_TTABLE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @luaT_lua_setenv(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = call i32 @lua_isfunction(i32* %3, i32 1)
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %13, label %6

6:                                                ; preds = %1
  %7 = load i32*, i32** %2, align 8
  %8 = call i32 @lua_isuserdata(i32* %7, i32 1)
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %13, label %10

10:                                               ; preds = %6
  %11 = load i32*, i32** %2, align 8
  %12 = call i32 @luaL_typerror(i32* %11, i32 1, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0))
  br label %13

13:                                               ; preds = %10, %6, %1
  %14 = load i32*, i32** %2, align 8
  %15 = load i32, i32* @LUA_TTABLE, align 4
  %16 = call i32 @luaL_checktype(i32* %14, i32 2, i32 %15)
  %17 = load i32*, i32** %2, align 8
  %18 = call i32 @lua_setuservalue(i32* %17, i32 1)
  ret i32 0
}

declare dso_local i32 @lua_isfunction(i32*, i32) #1

declare dso_local i32 @lua_isuserdata(i32*, i32) #1

declare dso_local i32 @luaL_typerror(i32*, i32, i8*) #1

declare dso_local i32 @luaL_checktype(i32*, i32, i32) #1

declare dso_local i32 @lua_setuservalue(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
